--- a/comprovações.html
+++ b/comprovações.html
@@ -30,9 +30,11 @@
         <button type="submit">Gerar Documento</button>
     </form>
 
-    <script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://unpkg.com/pizzip@3.1.5/dist/pizzip.min.js"></script>
+    <script src="https://unpkg.com/docxtemplater@3.21.0/build/docxtemplater.js"></script>
     <script src="script.js"></script>
+
 
 </body>
 </html>
