--- a/comprovações.html
+++ b/comprovações.html
@@ -31,9 +31,10 @@
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://unpkg.com/pizzip@3.1.5/dist/pizzip.min.js"></script>
-    <script src="https://unpkg.com/docxtemplater@3.21.0/build/docxtemplater.js"></script>
+    <script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docx@7.1.1/build/index.js"></script>
     <script src="script.js"></script>
+
 
 
 </body>
