--- a/comprovações.html
+++ b/comprovações.html
@@ -30,7 +30,7 @@
         <button type="submit">Gerar Documento</button>
     </form>
 
-    <script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mammoth/mammoth.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docx@7.1.1/build/index.js"></script>
     <script src="script.js"></script>
