--- a/comprovações.html
+++ b/comprovações.html
@@ -5,31 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Documentos</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Gerador de Documentos</h1>
-    <form id="form">
-        <label for="empresa">Empresa:</label>
-        <input type="text" id="empresa" required>
+<body class="text-center">
+    <div class="container input-container" id="input-container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow mb-4" style="background-color: #040404;">
+                    <div class="card-body">
+                        <h1 style="color: #f9f9f9;">Gerador de Documentos</h1>
+                        <form id="form">
+                            <label for="empresa">
+                                <input type="text" id="empresa" required placeholder=" ">
+                                <p>Empresa</p>
+                            </label>
 
-        <label for="nota">Nota Fiscal:</label>
-        <input type="text" id="nota" required>
+                            <label for="nota">
+                                <input type="text" id="nota" required placeholder=" ">
+                                <p>Nota Fiscal</p>
+                            </label>
 
-        <label for="ordem">Ordem de C/S:</label>
-        <input type="text" id="ordem" required>
+                            <label for="ordem">
+                                <input type="text" id="ordem" required placeholder=" ">
+                                <p>Ordem de C/S</p>
+                            </label>
 
-        <label for="data">Faturamento Mês/Ano:</label>
-        <input type="text" id="data" required>
+                            <label for="data">
+                                <input type="text" id="data" required placeholder=" ">
+                                <p>Faturamento Mês/Ano</p>
+                            </label>
 
-        <label for="modelo">Selecione o Modelo:</label>
-        <input type="file" id="modelo" accept=".docx" required>
+                            <label for="modelo">Selecione o Modelo (.docx):</label>
+                            <input type="file" id="modelo" accept=".docx" required>
 
-        <label for="zip">Arquivo ZIP (Imagens):</label>
-        <input type="file" id="zip" accept=".zip" required>
+                            <label for="zip">Arquivo ZIP (Imagens):</label>
+                            <input type="file" id="zip" accept=".zip" required>
 
-        <button type="submit">Gerar Documento</button>
-    </form>
-
+                            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Gerar Documento</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/mammoth/mammoth.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docx@7.1.1/build/index.js"></script>
