--- a/comprovações.html
+++ b/comprovações.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Documentos</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <style>
         * {
@@ -33,9 +34,13 @@
         
         label{
             position: relative;
+            display: block;
+            font-size: 1.2rem;
+            color: #f9f9f9;
+            margin-top: 1rem;
         }
 
-        label input{
+        label input[type="text"]{
             font-family: sans-serif;
             font-size: 1.2rem;
             color: #f9f9f9;
@@ -74,6 +79,29 @@
         label input:not(:focus) + p{
             color:#7a7a7a56
         }
+
+        .file-input {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 1rem;
+        }
+
+        .file-input label {
+            font-size: 1.2rem;
+            color: #f9f9f9;
+            margin-bottom: 0.5rem;
+        }
+
+        .file-input input {
+            padding: 0.5rem;
+            font-size: 1rem;
+            border: 2px solid #7a7a7a56;
+            border-radius: 0.3rem;
+            background: #fff;
+            color: #000;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body class="text-center">
@@ -104,11 +132,15 @@
                                 <p>Faturamento Mês/Ano</p>
                             </label>
 
-                            <label for="modelo">Selecione o Modelo (.docx):</label>
-                            <input type="file" id="modelo" accept=".docx" required>
-
-                            <label for="zip">Arquivo ZIP (Imagens):</label>
-                            <input type="file" id="zip" accept=".zip" required>
+                            <div class="file-input">
+                                <label for="modelo">Selecione o Modelo (.docx):</label>
+                                <input type="file" id="modelo" accept=".docx" required>
+                            </div>
+                            
+                            <div class="file-input">
+                                <label for="zip">Arquivo ZIP (Imagens):</label>
+                                <input type="file" id="zip" accept=".zip" required>
+                            </div>
 
                             <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Gerar Documento</button>
                         </form>
