--- a/comprovações.html
+++ b/comprovações.html
@@ -31,7 +31,9 @@
         .input-container {
             text-align: center;
         }
-        
+        .col-md-8{
+            margin-top: 20px;
+        }
         label{
             position: relative;
             display: block;
@@ -83,6 +85,7 @@
         .linha{
             display: flex;
             flex-direction: row;
+            margin: 10px;
         }
         
         .file-input {
